...
                                isItalic: isItalic
                            )
                        )
                        show = false
                        dismiss()
                    }
                    .accessibilityIdentifier("applyTextButton")
                }
                ToolbarItem(placement: .navigationBarLeading) {
                    Button("Cancel") {
                        show = false
                        dismiss()
                    }
...
